CREATE Fornecedor AND Telefone